Fix team responsive because @judemont has a too long name !

--- a/styles/team.css
+++ b/styles/team.css
@@ -167,6 +167,18 @@
     }
 }
 
+@media screen and (max-width: 415px) {
+    .member-name {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .member-name {
+        font-size: 16px;
+    }
+}
+
 @media screen and (max-width: 362px) {
     .member-top {
         height: 50%;
